# Resonance-Evolution

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODEOWNERS  PLAN.md  README.md  architecture.md  bootstrap_handoff.md  cache.txt  cache_out.txt  diag.txt  err.txt  live_out.txt  name_suggestions.md  out.txt  pending.md  pyproject.toml  reg_err.txt  reg_out.txt  test_out.txt  whats_built.md  wishlist.md
.claude/: launch.json
design/: dream_features_extensions.md  procedural_tools_pattern.md  workflow_from_within_apeiron.md
engine/: __init__.py  actions.py  bundle.py  core.py  file_watcher.py  input.py  inverse.py  node.py  realtime.py  realtime_tk.py  scene_watcher.py  screen.py
examples/: ideas_queue_sample.md
godot/: .gitignore  COMMUNICATION-ARCHITECTURE.md  CONNECTION-CONTRACT.md  DEMO-slice5.md  EVOLVER-LOOP.md  HANDOFF-2d-comms-layout.md  HANDOFF-canvas-chat.md  HANDOFF-no-fundamental-primitives.md  PROGRESS.md  README.md  aperture_room_hotload_proof.gd  aperture_room_hotload_proof.gd.uid  brick_street_pavement_proof.gd  brick_street_pavement_proof.gd.uid  brick_street_pavement_proof.tscn  brick_street_real_kit_proof.gd  brick_street_real_kit_proof.gd.uid  brick_street_real_kit_proof.tscn  brick_street_wave_a1_proof.gd  brick_street_wave_a1_proof.gd.uid  brick_street_wave_a1_proof.tscn  capture_visisonor_frame.gd  capture_visisonor_frame.gd.uid  demo_interactions.tscn  evolver_tick_cli.gd  evolver_tick_cli.gd.uid  headless_agent_harness_test.gd  headless_agent_harness_test.gd.uid  headless_amber_light_cube_scatterer_test.gd  headless_amber_light_cube_scatterer_test.gd.uid  headless_aperture3d_test.gd  headless_aperture3d_test.gd.uid  headless_aperture_3d_room_test.gd  headless_aperture_3d_room_test.gd.uid  headless_aperture_3d_scene_driver.gd  headless_aperture_3d_scene_driver.gd.uid  headless_aperture_board2d_test.gd  headless_aperture_board2d_test.gd.uid  headless_aperture_board_test.gd  headless_aperture_board_test.gd.uid  (+259 more)
legacy/: AGENTS.md  name_suggestions.md  pending.md  tasks.md
logs/: sample_chat.txt
node_types/: __init__.py  _toolbox_inference_rules.py  aggregator.py  auth_gate.py  bar.py  bottom_bar.py  box.py  browser_renderer.py  button.py  chat_interface.py  chat_interpreter.py  chat_router.py  computer.py  cube.py  dimension_n.py  dropdown.py  file_source.py  generator.py  gravity_field.py  group.py  idea_queue.py  image.py  inbox_echo.py  key_bindings.py  left_sidebar.py  light.py  list_renderer.py  mcp_source.py  panel_positioner.py  plane.py  portal.py  quarantine_source.py  right_sidebar.py  scene_loader.py  scene_mutator.py  scroll_bar.py  seed.py  session_archiver.py  session_lister.py  session_resolver.py  (+15 more)
notes/: demo_inventory.md
renderers/: __init__.py  ascii_debug.py  lambertian.py  painterly.py  projector_n.py  text.py
scenes/: aggregator_demo.json  chat_demo.json  computer_demo.json  dim4_cube_demo.json  dream_topology_demo.json  hello_cube.json  lighting_demo.json  painterly_demo.json  portal_demo.json  seed_world_demo.json  showcase.json  sphere_demo.json  text_demo.json  workflow_view.json
scripts/: create_desktop_shortcut.ps1  (+2 more)
(+1107 files in other folders)
