[project]
name = "apeiron"
version = "0.1.0"
description = "Node-graph engine for building, rendering, and inhabiting worlds."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.25",
    "Pillow>=10.0",
    "scikit-image>=0.21.0",
    "tkinterweb>=4.25.2,<5",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
# SPEC-066 3D path — headless Chromium screenshots feeding the
# BrowserRenderer node's bitmap output. Heavy (~150-300 MB after
# `playwright install chromium`) so opt-in rather than default.
browser-3d = ["playwright>=1.60,<2"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engine*", "node_types*", "renderers*", "tools*"]

[project.scripts]
apeiron-render = "tools.render:main"
apeiron-text = "tools.text_test:main"
apeiron-realtime = "tools.realtime:main"
