[project]
name = "apeiron"
version = "0.1.0"
description = "Node-graph engine for building, rendering, and inhabiting worlds."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.25",
    "Pillow>=10.0",
    "scikit-image>=0.21.0",
    "tkinterweb>=4.25.2,<5",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
# SPEC-066 3D path — headless Chromium screenshots feeding the
# BrowserRenderer node's bitmap output. Heavy (~150-300 MB after
# `playwright install chromium`) so opt-in rather than default.
browser-3d = ["playwright>=1.60,<2"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engine*", "node_types*", "renderers*", "tools*"]

[project.scripts]
apeiron-render = "tools.render:main"
apeiron-text = "tools.text_test:main"
apeiron-realtime = "tools.realtime:main"

[tool.pytest.ini_options]
# `supervisor` marks process-supervisor-level tests that spawn real
# subprocesses and exercise OS-level lifecycle (e.g. taskkill / SIGKILL).
# They live alongside unit tests but are not part of the default run -
# invoke explicitly with `-m supervisor` or by file path.
# See tests/test_streamjson_orphan_cleanup.py (SPEC-022, deferred-concerns #20).
markers = [
    "supervisor: process-supervisor-level test (spawns real subprocesses, OS-level lifecycle)",
]
# Exclude `supervisor`-marked tests from the default suite. Run them
# explicitly with: pytest -m supervisor
addopts = "-m 'not supervisor'"
